@@ -48,3 +48,9 @@
 
 * Fri Oct 01 17:08:45 2004, pabs <pabs@pablotron.org>
   * release version 0.1.2
+
+* Mon Oct 04 04:25:59 2004, pabs <pabs@pablotron.org>
+  * rubilicious.rb: add HTTP proxy support (roughtly based on a patch
+    from Guillaume Bisch <guillaume@bisch.org>
+  * rubilicious.rb: added Rubilicious#use_proxy override (defaults to
+    true), just in case people don't want to use the proxy
